--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "dependencies": {
     "react": "16.0.0-alpha.12",
     "react-native": "0.48.4",
-    "react-native-sound": "^0.10.4"
+    "react-native-sound-player": "^0.2.1"
   },
   "devDependencies": {
     "babel-jest": "21.2.0",
